First step: Nav-bar completed

--- a/foobarquix-ui/angular.json
+++ b/foobarquix-ui/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css", 
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -121,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "foobarquix-ui"
+  "defaultProject": "foobarquix-ui",
+  "cli": {
+    "analytics": false
+  }
 }
